check text-decoration

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
             integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="app">
@@ -29,7 +32,7 @@
     height: 3px;
     background-color: rgb(140, 122, 211);
     border: none;
-    margin-left: -160px;">
+    margin-left: -130px;">
 
             <div class="Logo-items" style=" 
     margin-left: 15px;
