Check some tags

--- a/additional.html
+++ b/additional.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <form action>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name"><br><br>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email"><br><br>
 
-        <label for="selection">Selection:</label>
-        <select id="selection" name="selection">
-            <option value="option1">Option 1</option>
-            <option value="option2">Option 2</option>
-            <option value="option3">Option 3</option>
-        </select><br><br>
+            <label for="selection">Selection:</label>
+            <select id="selection" name="selection">
+                <option value="option1">Option 1</option>
+                <option value="option2">Option 2</option>
+                <option value="option3">Option 3</option>
+            </select><br><br>
 
-        <label for="gender">Gender:</label>
-        
-        <input type="radio" id="gender" name ="gender" value="male">
-        <label for="male">Male</label>
-        <input type="radio" id="gender" name ="gender" value="female">
-        <label for="female">Female</label><br><br>
+            <label for="gender">Gender:</label>
 
+            <input type="radio" id="gender" name="gender" value="male">
+            <label for="male">Male</label>
+            <input type="radio" id="gender" name="gender" value="female">
+            <label for="female">Female</label><br><br>
 
-        <label for="hobby">Hobby:</label><br>
-        <input type="checkbox" > Voleybol<br>
-        <input type="checkbox" > Futbol<br>
-        <input type="checkbox" > Basketbol<br>
-        <input type="checkbox" > Yuzme<br>
-        <input type="checkbox" > Kosu<br>
-        <input type="checkbox" > Tenis<br>
-        <input type="checkbox"> Piano<br><br>
+            <label for="hobby">Hobby:</label><br>
+            <input type="checkbox"> Voleybol<br>
+            <input type="checkbox"> Futbol<br>
+            <input type="checkbox"> Basketbol<br>
+            <input type="checkbox"> Yuzme<br>
+            <input type="checkbox"> Kosu<br>
+            <input type="checkbox"> Tenis<br>
+            <input type="checkbox"> Piano<br><br>
 
-        <input type="submit"  value="Gonder">
+            <input type="submit" value="Gonder">
 
-    </form>
-</body>
+        </form>
+        <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Repellendus sint ratione explicabo doloremque laboriosam dolorum
+            facilis reiciendis eveniet accusamus quisquam. Obcaecati quia optio
+            perferendis debitis quam facere. Ipsum ex, deleniti facilis illum
+            repellendus at esse omnis unde vel et ipsa distinctio quod. Aut
+            voluptates accusantium harum minus temporibus quae rem.</blockquote>
+
+            <p>Fatima said: <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</q></p>
+            <p>John replied: <q>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</q></p>
+
+            <ins>Inserted text</ins>
+            <del>Deleted text</del>
+
+    </body>
 </html>
