--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <div class="finally">
                 <div class="finally-text" style="padding: 20px; color: blueviolet;">
                     <p>Finally, we have a working website! We hope you enjoy it.</p>
+                    <p>Author:  <q>Fatima</q></p>
         </div>
         </div>
     </body>
